--- a/src/main.css
+++ b/src/main.css
@@ -14,7 +14,7 @@ html {
 }
 body {
   background-color: darkslategrey;
-  color: white;
+  color: black;
   max-width: 800px;
   margin: 0 auto;
   font-family: "Cairo", sans-serif;
