--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -1,6 +1,9 @@
 .footer {
-  margin-top: 1rem;
+  display: block;
+  margin: 2rem;
   text-align: center;
   font-family: "Times New Roman", Times, serif;
   font-style: italic;
+  font-size: small;
+  color: white;
 }
