--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,20 +1,74 @@
-.header {
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  text-align: center;
+.container {
+  margin: 20px 5rem 2rem;
 }
 
-/* TO DO: Set Header into Two Containers(HomeLogo and ProfileNav) and properly make them align left/right into the corners */
-.header__home {
-  margin-right: 20rem;
+.center {
+  display: flex;
+  justify-content: center;
 }
-.header__profile-login {
-  display: inline;
+
+.header__nav {
+  box-shadow: 0px 2px 12px 0px black;
+  background-color: gray;
+  border-radius: 10px;
+  width: 752px;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 40px;
+  position: relative;
 }
-.header__profile-icon {
-  margin-left: 1rem;
+
+.header__nav-right {
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
-.header__home:link,
-.header__profile-icon:link {
-  background-color: transparent;
+
+.header__nav-items {
+  list-style-type: none;
+  padding: 0;
+  height: 100%;
+  margin: 0;
+  margin-right: 40px;
+}
+
+.header__nav-item {
+  display: inline-block;
+  height: 100%;
+  margin-right: 20px;
+}
+
+.header__nav-item:last-child {
+  margin-right: 0;
+}
+
+.header__link {
+  display: inline-block;
+  height: 100%;
+  font-size: 18px;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  vertical-align: middle;
+  padding: 0 3px;
+}
+
+.header__link:hover {
+  color: lime;
+}
+
+.header__nav-logo {
+  display: inline-block;
+  height: 100%;
+  width: 92px;
+  vertical-align: middle;
+  margin: 1rem;
+}
+
+.header__nav-profile {
+  vertical-align: middle;
+  max-width: 100%;
+  max-height: 50px;
 }
